# crow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: debug_lines.rs  rectangles.rs
examples/: chromatic_aberration.rs  context_example.rs  debug.rs  fps.rs  game_of_life.rs  rectangles.rs  rotation_example.rs
src/: color.rs  context.rs  draw.rs  error.rs  lib.rs  main.rs  target.rs  texture.rs  time.rs  vertex.rs
src/backend/: draw.rs  mod.rs  state.rs  tex.rs
src/backend/shader/: fragment.glsl  fragment_debug.glsl  mod.rs  vertex.glsl  vertex_debug.glsl  vertex_lines.glsl
src/shader/: fragment.glsl  mod.rs  vertex.glsl
tests/: test.rs
tests/actual/: .hidden
textures/: README.md
