[package]
name = "crow"
version = "0.3.2"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
description = "A pixel perfect 2D rendering engine"
keywords = ["game", "rendering", "2D", "gl"]
categories = [ "game-development", "graphics", "rendering", "rendering::engine" ]
license = "MIT"
repository = "https://github.com/lcnr/crow"
documentation = "https://docs.rs/crow/"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["serde1"]

[dependencies]
gl = "0.14"
glutin = "0.21"
image = "0.22"
static_assertions = "1"

[dependencies.serde]
package = "serde"
version = "1"
features = ["derive"]
optional = true

[features]
serde1 = ["serde", "glutin/serde"]

[dev-dependencies]
rand = "0.7"
criterion = "0.3"

[[test]]
name = "test"
harness = false

[[bench]]
name = "debug_lines"
harness = false
